updating ignore list

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,32 @@
+app/code/community/Cm/RedisSession/Model/Session.php
+app/code/community/Cm/RedisSession/etc/config.xml
+app/etc/modules/Cm_RedisSession.xml
+app/etc/modules/Mage_Api2.xml
+app/etc/modules/Mage_Captcha.xml
+app/etc/modules/Mage_CurrencySymbol.xml
+app/etc/modules/Mage_Oauth.xml
+lib/Cm/Cache/Backend/Redis.php
+lib/Credis/Client.php
+lib/Magento/Crypt.php
+lib/Magento/Db/Adapter/Pdo/Mysql.php
+lib/Magento/Db/Object.php
+lib/Magento/Db/Object/Interface.php
+lib/Magento/Db/Object/Table.php
+lib/Magento/Db/Object/Trigger.php
+lib/Magento/Db/Object/View.php
+lib/Magento/Db/Sql/Select.php
+lib/Magento/Db/Sql/Trigger.php
+lib/Magento/Exception.php
+lib/Magento/Profiler.php
+lib/Magento/Profiler/Output/Csvfile.php
+lib/Magento/Profiler/Output/Firebug.php
+lib/Magento/Profiler/Output/Html.php
+lib/Magento/Profiler/OutputAbstract.php
+media/dhl/logo.jpg
+media/xmlconnect/
+.htaccess
+.htaccess.sample
+/api.php
 .modgit/
 app/code/community/Find/
 app/code/community/Phoenix/
@@ -81,7 +110,7 @@ media/customer/
 media/downloadable/
 media/.htaccess
 media/import/
-media/xmlconnect/
+media/xml/
 nbproject/
 pear
 pear/
