--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+app/etc/local.xml
 app/code/community/Cm/RedisSession/Model/Session.php
 app/code/community/Cm/RedisSession/etc/config.xml
 app/etc/modules/Cm_RedisSession.xml
