update ignore list

--- a/.gitignore
+++ b/.gitignore
@@ -1251,3 +1251,18 @@ app/design/adminhtml/default/default/template/system/
 app/design/frontend/base/default/template/bundle/
 app/design/frontend/base/default/template/page/
 app/locale/en_US/Mage_AmazonPayments.csv
+.idea/
+app/design/adminhtml/default/default/etc/
+app/design/adminhtml/default/default/template/paypal/
+app/design/frontend/base/default/etc/
+app/design/frontend/base/default/layout/bml.xml
+app/design/frontend/base/default/template/paypal/
+app/design/frontend/rwd/
+app/locale/de_DE/
+app/locale/es_ES/
+app/locale/fr_FR/
+app/locale/nl_NL/
+app/locale/pt_BR/
+app/locale/zh_CN/
+lib/
+skin/frontend/rwd/
